<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="randomize">Randomize</string>
    <string name="default_location">Unknown</string>
    <string name="open_now">Open now</string>
    <string name="cuisines">Cuisines</string>
    <string name="price">Price</string>
    <string name="max_distance_title">Max Distance</string>
    <string name="favorites_only">Favorites Only</string>
    <string name="price_1">$</string>
    <string name="price_2">$$</string>
    <string name="price_3">$$$</string>
    <string name="price_4">$$$$</string>
    <string name="confirm">Apply Filter</string>
    <string name="reset">Reset</string>
    <string name="american">American</string>
    <string name="asian">Asian</string>
    <string name="bbq">BBQ</string>
    <string name="deli">Deli</string>
    <string name="dessert">Dessert</string>
    <string name="italian">Italian</string>
    <string name="indian">Indian</string>
    <string name="mexican">Mexican</string>
    <string name="pizza">Pizza</string>
    <string name="seafood">Seafood</string>
    <string name="steak">Steak</string>
    <string name="sushi">Sushi</string>
    <string name="location_prompt">Enter Location…</string>
    <string name="diet">Diet</string>
    <string name="xout">X</string>
    <string name="ok">OK</string>
    <string name="cancel">Cancel</string>
    <string name="no_restaurants_error_message">Would you like to report this restaurant as closed and add it to your blocked list?</string>
    <string name="all_restaurants_blocked_error_message">All Restaurants are blocked.\nPlease remove some filters or extend the search distance.</string>
    <string name="location_not_set_error_message">"User location is required.\nPlease enter location or turn on gps in the top bar."</string>
    <string name="no_restaurants_found_error_title">No Restaurants Found</string>
    <string name="all_restaurants_blocked_error_title">"All Restaurants Blocked"</string>
    <string name="location_not_set_error_title">Location not set</string>
    <string name="fast_food">Fast Food</string>
    <string name="sit_down">Table Service</string>
    <string name="InvalidLocationMessage">Unable to find location selected. Please select a different location or use current location.</string>
    <string name="InvalidLocationTittle">Invalid Location Selected</string>
    <string name="rating">Rating</string>
    <string name="rating_title">Minimum Rating</string>
    <string name="internet_error">Internet Error</string>
    <string name="internet_error_message">There appears to be an issue with your internet. Please check that wifi or mobile data are turned on and functioning properly.</string>
</resources>