<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:clickable="true"
        android:focusable="true">
    <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/filter_overlay_background"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
    >
        <TextView
                android:id="@+id/title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                android:layout_marginStart="@dimen/filter_overlay_side_margin"
                android:layout_marginTop="@dimen/filter_overlay_top_margin"
                android:text="@string/price"
                android:textSize="@dimen/filter_title_text_size"
                android:textColor="@color/filter_overlay_text"
        />
        <com.google.android.material.button.MaterialButton
                android:id='@+id/price1'
                style="@style/PriceButtonAppearance"
                android:text="@string/price_1"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/title"
                android:layout_marginStart="@dimen/filter_overlay_side_margin"
                android:layout_marginTop="@dimen/filter_overlay_top_margin"
        />
        <com.google.android.material.button.MaterialButton
                android:id='@+id/price2'
                style="@style/PriceButtonAppearance"
                android:text="@string/price_2"
                app:layout_constraintStart_toEndOf="@id/price1"
                app:layout_constraintEnd_toStartOf="@id/price3"
                app:layout_constraintTop_toBottomOf="@id/title"
                android:layout_marginTop="@dimen/filter_overlay_top_margin"
        />
        <com.google.android.material.button.MaterialButton
                android:id='@+id/price3'
                style="@style/PriceButtonAppearance"
                android:text="@string/price_3"
                app:layout_constraintStart_toEndOf="@id/price2"
                app:layout_constraintEnd_toStartOf="@id/price4"
                app:layout_constraintTop_toBottomOf="@id/title"
                android:layout_marginTop="@dimen/filter_overlay_top_margin"
        />
        <com.google.android.material.button.MaterialButton
                android:id='@+id/price4'
                style="@style/PriceButtonAppearance"
                android:text="@string/price_4"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@id/title"
                android:layout_marginEnd="@dimen/filter_overlay_side_margin"
                android:layout_marginTop="@dimen/filter_overlay_top_margin"
        />
        <include
                android:id="@+id/confirmation_buttons"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                layout="@layout/confirmation_buttons"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@id/price4"
                android:layout_marginTop="@dimen/filter_overlay_top_margin"
                android:layout_marginBottom="@dimen/filter_overlay_top_margin"
                android:layout_marginEnd="@dimen/filter_overlay_side_margin"
        />
    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>
