<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:id="@+id/grid"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
>
    <com.google.android.material.card.MaterialCardView
            style="@style/CategoryCard"
            android:id="@+id/american"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintEnd_toStartOf="@id/asian"
            app:layout_constraintStart_toStartOf="parent"
    >
        <androidx.constraintlayout.widget.ConstraintLayout
                style="@style/CategoryConstraint"
        >
            <ImageView
                    style="@style/CategoryIcon"
                    android:id="@+id/american_icon"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintBottom_toTopOf="@id/american_description"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    android:src="@drawable/american"
            />
            <TextView
                    style="@style/CategoryText"
                    android:id="@+id/american_description"
                    app:layout_constraintTop_toBottomOf="@id/american_icon"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    android:text="@string/american"
            />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </com.google.android.material.card.MaterialCardView>
    <com.google.android.material.card.MaterialCardView
            style="@style/CategoryCard"
            android:id="@+id/asian"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintEnd_toStartOf="@id/bbq"
            app:layout_constraintStart_toEndOf="@id/american"
    >
        <androidx.constraintlayout.widget.ConstraintLayout
                style="@style/CategoryConstraint"
        >
            <ImageView
                    style="@style/CategoryIcon"
                    android:id="@+id/asian_icon"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintBottom_toTopOf="@id/asian_description"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    android:src="@drawable/asian"
            />
            <TextView
                    style="@style/CategoryText"
                    android:id="@+id/asian_description"
                    app:layout_constraintTop_toBottomOf="@id/asian_icon"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    android:text="@string/asian"
            />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </com.google.android.material.card.MaterialCardView>
    <com.google.android.material.card.MaterialCardView
            style="@style/CategoryCard"
            android:id="@+id/bbq"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/asian"
    >
        <androidx.constraintlayout.widget.ConstraintLayout
                style="@style/CategoryConstraint"
        >
            <ImageView
                    style="@style/CategoryIcon"
                    android:id="@+id/bbq_icon"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintBottom_toTopOf="@id/bbq_description"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    android:src="@drawable/bbq"
            />
            <TextView
                    style="@style/CategoryText"
                    android:id="@+id/bbq_description"
                    app:layout_constraintTop_toBottomOf="@id/bbq_icon"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    android:text="@string/bbq"
            />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </com.google.android.material.card.MaterialCardView>
    <com.google.android.material.card.MaterialCardView
            style="@style/CategoryCard"
            android:id="@+id/deli"
            app:layout_constraintTop_toBottomOf="@id/american"
            app:layout_constraintEnd_toStartOf="@id/desserts"
            app:layout_constraintStart_toStartOf="parent"
    >
        <androidx.constraintlayout.widget.ConstraintLayout
                style="@style/CategoryConstraint"
        >
            <ImageView
                    style="@style/CategoryIcon"
                    android:id="@+id/deli_icon"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintBottom_toTopOf="@id/deli_description"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    android:src="@drawable/deli"
            />
            <TextView
                    style="@style/CategoryText"
                    android:id="@+id/deli_description"
                    app:layout_constraintTop_toBottomOf="@id/deli_icon"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    android:text="@string/deli"
            />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </com.google.android.material.card.MaterialCardView>
    <com.google.android.material.card.MaterialCardView
            style="@style/CategoryCard"
            android:id="@+id/desserts"
            app:layout_constraintTop_toBottomOf="@id/asian"
            app:layout_constraintEnd_toStartOf="@id/italian"
            app:layout_constraintStart_toEndOf="@id/deli"
    >
        <androidx.constraintlayout.widget.ConstraintLayout
                style="@style/CategoryConstraint"
        >
            <ImageView
                    style="@style/CategoryIcon"
                    android:id="@+id/desserts_icon"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintBottom_toTopOf="@id/desserts_description"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    android:src="@drawable/desserts"
            />
            <TextView
                    style="@style/CategoryText"
                    android:id="@+id/desserts_description"
                    app:layout_constraintTop_toBottomOf="@id/desserts_icon"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    android:text="@string/dessert"
            />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </com.google.android.material.card.MaterialCardView>
    <com.google.android.material.card.MaterialCardView
            style="@style/CategoryCard"
            android:id="@+id/italian"
            app:layout_constraintTop_toBottomOf="@id/bbq"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/desserts"
    >
        <androidx.constraintlayout.widget.ConstraintLayout
                style="@style/CategoryConstraint"
        >
            <ImageView
                    style="@style/CategoryIcon"
                    android:id="@+id/italian_icon"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintBottom_toTopOf="@id/italian_description"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    android:src="@drawable/italian"
            />
            <TextView
                    style="@style/CategoryText"
                    android:id="@+id/italian_description"
                    app:layout_constraintTop_toBottomOf="@id/italian_icon"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    android:text="@string/italian"
            />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </com.google.android.material.card.MaterialCardView>
    <com.google.android.material.card.MaterialCardView
            style="@style/CategoryCard"
            android:id="@+id/indian"
            app:layout_constraintTop_toBottomOf="@id/deli"
            app:layout_constraintEnd_toStartOf="@id/mexican"
            app:layout_constraintStart_toStartOf="parent"
    >
        <androidx.constraintlayout.widget.ConstraintLayout
                style="@style/CategoryConstraint"
        >
            <ImageView
                    style="@style/CategoryIcon"
                    android:id="@+id/indian_icon"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintBottom_toTopOf="@id/indian_description"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    android:src="@drawable/indian"
            />
            <TextView
                    style="@style/CategoryText"
                    android:id="@+id/indian_description"
                    app:layout_constraintTop_toBottomOf="@id/indian_icon"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    android:text="@string/indian"
            />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </com.google.android.material.card.MaterialCardView>
    <com.google.android.material.card.MaterialCardView
            style="@style/CategoryCard"
            android:id="@+id/mexican"
            app:layout_constraintTop_toBottomOf="@id/desserts"
            app:layout_constraintEnd_toStartOf="@id/pizza"
            app:layout_constraintStart_toEndOf="@id/indian"
    >
        <androidx.constraintlayout.widget.ConstraintLayout
                style="@style/CategoryConstraint"
        >
            <ImageView
                    style="@style/CategoryIcon"
                    android:id="@+id/mexican_icon"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintBottom_toTopOf="@id/mexican_description"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    android:src="@drawable/mexican"
            />
            <TextView
                    style="@style/CategoryText"
                    android:id="@+id/mexican_description"
                    app:layout_constraintTop_toBottomOf="@id/mexican_icon"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    android:text="@string/mexican"
            />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </com.google.android.material.card.MaterialCardView>
    <com.google.android.material.card.MaterialCardView
            style="@style/CategoryCard"
            android:id="@+id/pizza"
            app:layout_constraintTop_toBottomOf="@id/italian"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/mexican"
    >
        <androidx.constraintlayout.widget.ConstraintLayout
                style="@style/CategoryConstraint"
        >
            <ImageView
                    style="@style/CategoryIcon"
                    android:id="@+id/pizza_icon"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintBottom_toTopOf="@id/pizza_description"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    android:src="@drawable/pizza"
            />
            <TextView
                    style="@style/CategoryText"
                    android:id="@+id/pizza_description"
                    app:layout_constraintTop_toBottomOf="@id/pizza_icon"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    android:text="@string/pizza"
            />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </com.google.android.material.card.MaterialCardView>
    <com.google.android.material.card.MaterialCardView
            style="@style/CategoryCard"
            android:id="@+id/seafood"
            app:layout_constraintTop_toBottomOf="@id/indian"
            app:layout_constraintEnd_toStartOf="@id/steak"
            app:layout_constraintStart_toStartOf="parent"
    >
        <androidx.constraintlayout.widget.ConstraintLayout
                style="@style/CategoryConstraint"
        >
            <ImageView
                    style="@style/CategoryIcon"
                    android:id="@+id/seafood_icon"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintBottom_toTopOf="@id/seafood_description"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    android:src="@drawable/seafood"
            />
            <TextView
                    style="@style/CategoryText"
                    android:id="@+id/seafood_description"
                    app:layout_constraintTop_toBottomOf="@id/seafood_icon"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    android:text="@string/seafood"
            />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </com.google.android.material.card.MaterialCardView>
    <com.google.android.material.card.MaterialCardView
            style="@style/CategoryCard"
            android:id="@+id/steak"
            app:layout_constraintTop_toBottomOf="@id/mexican"
            app:layout_constraintEnd_toStartOf="@id/sushi"
            app:layout_constraintStart_toEndOf="@id/seafood"
    >
        <androidx.constraintlayout.widget.ConstraintLayout
                style="@style/CategoryConstraint"
        >
            <ImageView
                    style="@style/CategoryIcon"
                    android:id="@+id/steak_icon"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintBottom_toTopOf="@id/steak_description"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    android:src="@drawable/steak"
            />
            <TextView
                    style="@style/CategoryText"
                    android:id="@+id/steak_description"
                    app:layout_constraintTop_toBottomOf="@id/steak_icon"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    android:text="@string/steak"
            />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </com.google.android.material.card.MaterialCardView>
    <com.google.android.material.card.MaterialCardView
            style="@style/CategoryCard"
            android:id="@+id/sushi"
            app:layout_constraintTop_toBottomOf="@id/pizza"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/steak"
    >
        <androidx.constraintlayout.widget.ConstraintLayout
                style="@style/CategoryConstraint"
        >
            <ImageView
                    style="@style/CategoryIcon"
                    android:id="@+id/sushi_icon"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintBottom_toTopOf="@id/sushi_description"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    android:src="@drawable/sushi"
            />
            <TextView
                    style="@style/CategoryText"
                    android:id="@+id/sushi_description"
                    app:layout_constraintTop_toBottomOf="@id/sushi_icon"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    android:text="@string/sushi"
            />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </com.google.android.material.card.MaterialCardView>
</androidx.constraintlayout.widget.ConstraintLayout>